testsuite/tests/parser/should_fail/cmdFail005.stderr

cmdFail005.hs:4:15: error: Parse error in command: x@(_ -< _)
